[package]
authors = ["Jack Grigg <str4d@i2pmail.org>"]
description = "BLS signatures"
documentation = "https://github.com/str4d/bls"
homepage = "https://github.com/str4d/bls"
license = "MIT/Apache-2.0"
name = "bls"
repository = "https://github.com/str4d/bls"
version = "0.0.1"
edition = "2021"
rust-version = "1.56"

[dependencies]
digest = "0.9"
pairing = "0.23"
rand_core = "0.6"

[dev-dependencies]
blake3 = { version = "1, <1.3", features = ["traits-preview"] }
bls12_381 = { version = "0.8", features = ["experimental"] }
rand = "0.8"
rand_chacha = "0.3"
